--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <br>
         <div class="header-links">
           <a class="link" href="#about" data-scroll>About Me</a>
-          <a class="link" href="#projects" data-scroll>Projects</a>
+         <!-- <a class="link" href="#projects" data-scroll>Projects</a>-->
         </div>
       </div>
       <a class="down" href="#about" data-scroll><i class="icon fa fa-chevron-down" aria-hidden="true"></i></a>
@@ -82,7 +82,7 @@
           />
         </picture>
         <p>
-          Junior Software Engineer with a passion for building innovative and user-friendly products. Proven ability to learn quickly and adapt to new technologies. Expertise in Java. good with communication, teamwork, problem-solving, leadership, and attention to detail.
+          junior Software Engineer with a passion for building innovative and user-friendly products. Proven ability to learn quickly and adapt to new technologies. Expertise in Java. good with communication, teamwork, problem-solving, leadership, and attention to detail.
                     </p>
       </div>
 
@@ -93,8 +93,8 @@
           <h2>Languages</h2>
         
           <i class="devicon-java-plain-wordmark colored"></i>
-          <!-- <i class="devicon-cplusplus-plain colored"></i>
-          <i class="devicon-javascript-plain colored"></i> -->
+           <i class="devicon-cplusplus-plain colored"></i>
+          <i class="devicon-javascript-plain colored"></i> 
           <p>Programming languages I have learned.</p>
         </div>
 
@@ -103,7 +103,7 @@
       </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- Projects Section 
     <section id="projects">
       <div class="user-details">
         <h1>Projects</h1>
@@ -111,7 +111,7 @@
     <footer class="footer">
       <p>&copy; Hamad Alsoqaih, 2023</p>
     </footer>
-
+-->
     <!-- Import JS: Particles Theme -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <!-- Import JS: Sweet Scroll -->
