--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           />
         </picture>
         <p>
-          junior Software Engineer with a passion for building innovative and user-friendly products. Proven ability to learn quickly and adapt to new technologies. Expertise in Java. good with communication, teamwork, problem-solving, leadership, and attention to detail.
+          junior Software Engineer with a passion for building innovative and user-friendly products. Proven ability to learn quickly and adapt to new technologies. Expertise in Java, Python, HTML, JavaScript, CSS. good with communication, teamwork, problem-solving, leadership, and attention to detail.
                     </p>
       </div>
 
