--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
           <h2>Languages</h2>
         
           <i class="devicon-java-plain-wordmark colored"></i>
-           <i class="devicon-cplusplus-plain colored"></i>
-          <i class="devicon-javascript-plain colored"></i> 
+          <!-- <i class="devicon-cplusplus-plain colored"></i>
+          <i class="devicon-javascript-plain colored"></i> -->
           <p>Programming languages I have learned.</p>
         </div>
 
