--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
           />
         </picture>
         <p>
-          junior Software Engineer with a passion for building innovative and user-friendly products. Proven ability to learn quickly and adapt to new technologies. Expertise in Java, Python, HTML, JavaScript, CSS. good with communication, teamwork, problem-solving, leadership, and attention to detail.
+          Senior Software Engineering student with a track in Artificial Intelligence and Data Science. Experienced in Java, Python, HTML, CSS, and JavaScript. Currently focusing on applying software engineering principles to projects involving AI and data-driven solutions.<br>
+
+Coursework and projects have included software development, data analysis, and web technologies. Comfortable working in team settings and contributing to problem-solving, communication, and leadership tasks when required.<br>
+
+Looking to gain further experience in software engineering and data science through professional opportunities.
                     </p>
       </div>
 
